fix meapp page translations and update profile age record

--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -1078,8 +1078,8 @@
         },
         "description": "تطبيق Me هو عبارة عن محفظة رقمية وسجِّل نقدي في جهاز واحد. تستخدم البلديات تطبيق Me-app لإصدار الأرصدة. باستخدام التطبيق، يمكن للمقيمين إدارة أرصدتهم بسهولة. يستخدم مقدمو الخدمات التطبيق لمسح رموز QR.",
         "download": {
-            "description": "قم بتنزيل تطبيق Me من متاجر التطبيقات أدناه. <a href=\"{{download_link}}\">انقر هنا لفتح متجر التطبيقات المناسب مباشرةً</a> على هاتفك أو جهازك اللوحي.",
-            "title": "قم بتنزيل Me على هاتفك أو جهازك اللوحي"
+            "title": "قم بتنزيل Me على هاتفك أو جهازك اللوحي",
+            "description": "قم بتنزيل تطبيق Me من متاجر التطبيقات أدناه. <a href=\"{{ download_link }}\">انقر هنا لفتح متجر التطبيقات المناسب مباشرةً</a> على هاتفك أو جهازك اللوحي."
         },
         "title": "نبذة عن تطبيق Me",
         "img_alt": "أنا-التطبيق"
@@ -2512,7 +2512,8 @@
         },
         "personal": {
             "bsn": "BSN",
-            "title": "البيانات الشخصية"
+            "title": "البيانات الشخصية",
+            "age": "العمر"
         },
         "title": "البيانات",
         "household": {
