--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -1314,8 +1314,8 @@
         },
         "description": "Приложение Me - это цифровой кошелек и кассовый аппарат в одном лице. Муниципалитеты используют Me-приложение для выдачи кредитов. С помощью приложения жители могут легко управлять своими кредитами. Поставщики услуг используют приложение для сканирования QR-кодов.",
         "download": {
-            "description": "Загрузите приложение Me из указанных ниже магазинов приложений. <a href=\"{{download_link}}\">Нажмите здесь, чтобы</a> открыть <a href=\"{{download_link}}\">соответствующий магазин приложений</a> на вашем телефоне или планшете.",
-            "title": "Загрузите меня на свой телефон или планшет"
+            "title": "Загрузите меня на свой телефон или планшет",
+            "description": "Загрузите приложение Me из указанных ниже магазинов приложений. <a href=\"{{ download_link }}\">Нажмите здесь, чтобы открыть соответствующий магазин приложений</a> на вашем телефоне или планшете."
         },
         "title": "О приложении \"Я",
         "img_alt": "Me-app"
@@ -2370,7 +2370,8 @@
         },
         "personal": {
             "bsn": "BSN",
-            "title": "Персональные данные"
+            "title": "Персональные данные",
+            "age": "Возраст"
         },
         "title": "Данные",
         "household": {
