--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -1314,8 +1314,8 @@
         },
         "description": "Додаток Me - це цифровий гаманець і касовий апарат в одному. Муніципалітети використовують додаток Me для видачі кредитів. За допомогою додатку мешканці можуть легко керувати своїми кредитами. Постачальники використовують додаток для сканування QR-кодів.",
         "download": {
-            "description": "Завантажте додаток Me з наведених нижче магазинів додатків. <a href=\"{{download_link}}\">Натисніть тут, щоб безпосередньо</a> відкрити <a href=\"{{download_link}}\">відповідний магазин додатків</a> на вашому телефоні або планшеті.",
-            "title": "Завантажте Мене на телефон або планшет"
+            "title": "Завантажте Мене на телефон або планшет",
+            "description": "Завантажте додаток Me із зазначених нижче магазинів додатків. <a href=\"{{ download_link }}\">Натисніть тут, щоб безпосередньо відкрити відповідний магазин додатків</a> на вашому телефоні або планшеті."
         },
         "title": "Про додаток \"Я",
         "img_alt": "Me-app"
@@ -2370,7 +2370,8 @@
         },
         "personal": {
             "bsn": "BSN",
-            "title": "Персональні дані"
+            "title": "Персональні дані",
+            "age": "Вік"
         },
         "title": "Дані",
         "household": {
