--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -1267,8 +1267,8 @@
         },
         "description": "The Me app is a digital wallet and cash register in one. Municipalities use the Me app to issue credits. The app allows residents to easily manage their balances. Providers use the app to scan QR codes.",
         "download": {
-            "description": "Download the Me app from the app stores below. <a href=\"{{download_link}}\">Click here to directly</a> open <a href=\"{{download_link}}\">the appropriate app store</a> on your phone or tablet.",
-            "title": "Download Me on your phone or tablet"
+            "title": "Download Me on your phone or tablet",
+            "description": "Download the Me app from the app stores below. <a href=\"{{ download_link }}\">Click here to directly open the appropriate app store</a> on your phone or tablet."
         },
         "title": "About the Me app",
         "img_alt": "Me-app"
@@ -2217,7 +2217,8 @@
         },
         "personal": {
             "bsn": "BSN",
-            "title": "Personal data"
+            "title": "Personal data",
+            "age": "Age"
         },
         "title": "Data",
         "household": {
