--- a/react/src/webshop/i18n/translated/fr.json
+++ b/react/src/webshop/i18n/translated/fr.json
@@ -1314,8 +1314,8 @@
         },
         "description": "L'application Me est à la fois un portefeuille numérique et une caisse enregistreuse. Les municipalités utilisent l'application Me pour émettre des crédits. Grâce à l'application, les résidents peuvent facilement gérer leurs crédits. Les prestataires utilisent l'application pour scanner les codes QR.",
         "download": {
-            "description": "Téléchargez l'application Me via les magasins d'applications ci-dessous. <a href=\"{{download_link}}\">Cliquez ici pour</a> ouvrir <a href=\"{{download_link}}\">directement</a> le <a href=\"{{download_link}}\">magasin d'applications approprié</a> sur votre téléphone ou votre tablette.",
-            "title": "Téléchargez Me sur votre téléphone ou tablette"
+            "title": "Téléchargez Me sur votre téléphone ou tablette",
+            "description": "Téléchargez l'application Me dans les magasins d'applications ci-dessous. <a href=\"{{ download_link }}\">Cliquez ici pour ouvrir directement le magasin d'applications approprié</a> sur votre téléphone ou votre tablette."
         },
         "title": "À propos de l'application Me",
         "img_alt": "Me-app"
@@ -2370,7 +2370,8 @@
         },
         "personal": {
             "bsn": "BSN",
-            "title": "Données personnelles"
+            "title": "Données personnelles",
+            "age": "L'âge"
         },
         "title": "Données",
         "household": {
