--- a/react/src/webshop/i18n/translated/tr.json
+++ b/react/src/webshop/i18n/translated/tr.json
@@ -1034,8 +1034,8 @@
         },
         "description": "Me uygulaması dijital bir cüzdan ve yazar kasadır. Belediyeler kredi vermek için Me-uygulamasını kullanmaktadır. Uygulama sayesinde vatandaşlar kredilerini kolayca yönetebilir. Sağlayıcılar QR kodlarını taramak için uygulamayı kullanır.",
         "download": {
-            "description": "Me uygulamasını aşağıdaki uygulama mağazalarından indirin. Telefonunuzda veya tabletinizde <a href=\"{{download_link}}\">ilgili uygulama mağazasını doğrudan</a> açmak <a href=\"{{download_link}}\">için buraya tıklayın</a>.",
-            "title": "Beni telefonunuza veya tabletinize indirin"
+            "title": "Beni telefonunuza veya tabletinize indirin",
+            "description": "Me uygulamasını aşağıdaki uygulama mağazalarından indirin. Telefonunuzda veya tabletinizde <a href=\"{{ download_link }}\">ilgili uygulama mağazasını doğrudan açmak için buraya tıklayın</a>."
         },
         "title": "Me uygulaması hakkında",
         "img_alt": "Me-app"
@@ -2512,7 +2512,8 @@
         },
         "personal": {
             "bsn": "BSN",
-            "title": "Kişisel veriler"
+            "title": "Kişisel veriler",
+            "age": "Yaş"
         },
         "title": "Veri",
         "household": {
