--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -3034,7 +3034,6 @@
                     },
                     "preferences_emails": "E-Mail-Einstellungen",
                     "preferences_notifications": "Einstellungen für Benachrichtigungen",
-                    "records": "Profil",
                     "reimbursements": "Kostendeckung",
                     "reservations": "Reservierungen",
                     "schagen": {
@@ -3054,7 +3053,8 @@
                     },
                     "winterswijk": {
                         "funds": "Aktivieren Sie"
-                    }
+                    },
+                    "profile": "Daten"
                 },
                 "groningen": {
                     "voucher": "Meine Stadtkarte"
@@ -3164,7 +3164,8 @@
             "security_2fa": "Sicherheit",
             "security_sessions": "Sitzungen",
             "aria_label": "Benutzermenü",
-            "title": "Persönlich"
+            "title": "Persönlich",
+            "profile": "Daten"
         },
         "main_menu": "Hauptmenü",
         "open_home": "Zurück zur Hauptseite",
