--- a/react/src/webshop/i18n/translated/tr.json
+++ b/react/src/webshop/i18n/translated/tr.json
@@ -2009,7 +2009,7 @@
             "title": "İşlemler",
             "top_up": "Yükseltilmiş"
         },
-        "voucher_card_combined": {
+        "card_combined": {
             "header": {
                 "title": "Nasıl çalışıyor?"
             },
@@ -3022,7 +3022,6 @@
         },
         "description_formal": "Sen kullanacaksın <strong>{{fund}}</strong><br/>Bu rezervasyon için kredi. Rezervasyon mu yapıyorsunuz? O zaman kişisel verilerinizi sağlayıcı ile paylaşmamızı kabul etmiş olursunuz.",
         "description_formal_time": "{{ days_to_cancel }} Rezervasyonu onaylandıktan sonraki günler içinde de iptal edebilirsiniz.",
-        "description_informal": "Sen kendi <strong>{{fund}}</strong><br/>Bu rezervasyon için kredi. Rezervasyon mu yapıyorsunuz? O zaman kişisel verilerinizi sağlayıcı ile paylaşmamızı kabul etmiş olursunuz.",
         "description_informal_time": "{{ days_to_cancel }} Rezervasyonu onaylandıktan sonraki günler içinde de iptal edebilirsiniz.",
         "email_setup_description": "Mesaj almak için e-posta adresinizi ekleyin.",
         "email_setup_title": "E-posta adresi ekle",
@@ -3087,7 +3086,8 @@
             "description": "Rezervasyonunuz yapılmıştır.",
             "title": "İşe yaradı!"
         },
-        "voucher_image_alt": "Kredi"
+        "voucher_image_alt": "Kredi",
+        "description_informal": "Sen kendi <strong>{{fund}}</strong> Bu rezervasyon için kredi.<br/>Rezervasyon mu yapıyorsunuz? O zaman kişisel verilerinizi sağlayıcı ile paylaşmamızı kabul etmiş olursunuz."
     },
     "modal": {
         "buttons": {
