--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -1628,7 +1628,6 @@
         },
         "description_formal": "Ви використаєте свій <strong>{{fund}}</strong><br/>кредит для цього бронювання. Ви робите бронювання? Тоді ви погоджуєтесь, що ми передаємо ваші персональні дані постачальнику.",
         "description_formal_time": "{{ days_to_cancel }} Ви все ще можете скасувати бронювання протягом декількох днів після підтвердження.",
-        "description_informal": "Ви використовуєте свій <strong>{{fund}}</strong><br/>Ви використовуєте свій кредит для цього бронювання. Ви робите бронювання? Тоді ви погоджуєтесь, що ми передаємо ваші персональні дані постачальнику.",
         "description_informal_time": "{{ days_to_cancel }} Ви все ще можете скасувати бронювання протягом декількох днів після підтвердження.",
         "email_setup_description": "Додайте свою електронну адресу, щоб отримувати повідомлення.",
         "email_setup_title": "Додати адресу електронної пошти",
@@ -1693,7 +1692,8 @@
             "description": "Ваше бронювання зроблено.",
             "title": "Спрацювало!"
         },
-        "voucher_image_alt": "Кредит"
+        "voucher_image_alt": "Кредит",
+        "description_informal": "Ви використовуєте свій <strong>{{fund}}</strong> кредит для цього бронювання.<br/>Здійснюєте бронювання? Тоді ви погоджуєтесь, що ми передаємо ваші персональні дані постачальнику послуг."
     },
     "modal": {
         "buttons": {
@@ -3338,7 +3338,7 @@
             "title": "Транзакції",
             "top_up": "Оновлений"
         },
-        "voucher_card_combined": {
+        "card_combined": {
             "header": {
                 "title": "Як це працює?"
             },
