add skip button for optional reservation address

--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -3322,7 +3322,8 @@
             "go_to_reservation": "Go to reservation",
             "processing": "Process",
             "submit": "Submit",
-            "next": "Next"
+            "next": "Next",
+            "skip": "Skip"
         },
         "cancel": "Cancel",
         "choose_credit": "Choose the credit to pay with",
