--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -1596,7 +1596,8 @@
             "go_to_reservation": "Перейти к бронированию",
             "next": "Следующий",
             "processing": "Процесс",
-            "submit": "Отправить"
+            "submit": "Отправить",
+            "skip": "Скип"
         },
         "cancel": "Отмена",
         "choose_credit": "Выберите кредит для оплаты",
