--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -1596,7 +1596,8 @@
             "go_to_reservation": "Перейти до бронювання",
             "next": "Далі",
             "processing": "Процес",
-            "submit": "Надіслати"
+            "submit": "Надіслати",
+            "skip": "Пропустити."
         },
         "cancel": "Скасувати",
         "choose_credit": "Виберіть кредит для оплати",
