--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -2998,7 +2998,8 @@
             "go_to_reservation": "الانتقال إلى الحجز",
             "next": "التالي",
             "processing": "العملية",
-            "submit": "إرسال"
+            "submit": "إرسال",
+            "skip": "تخطي"
         },
         "cancel": "إلغاء",
         "choose_credit": "اختر الرصيد الذي ستدفع به",
