--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -1596,7 +1596,8 @@
             "go_to_reservation": "Zur Buchung gehen",
             "next": "Weiter",
             "processing": "Prozess",
-            "submit": "Einreichen"
+            "submit": "Einreichen",
+            "skip": "Überspringen"
         },
         "cancel": "Abbrechen",
         "choose_credit": "Wählen Sie das Guthaben, mit dem Sie bezahlen möchten",
