--- a/react/src/webshop/i18n/translated/fr.json
+++ b/react/src/webshop/i18n/translated/fr.json
@@ -1596,7 +1596,8 @@
             "go_to_reservation": "Aller à la réservation",
             "next": "Suivant",
             "processing": "Processus",
-            "submit": "Soumettre"
+            "submit": "Soumettre",
+            "skip": "Sauter"
         },
         "cancel": "Annuler",
         "choose_credit": "Choisir le crédit pour payer",
