--- a/react/src/webshop/i18n/translated/tr.json
+++ b/react/src/webshop/i18n/translated/tr.json
@@ -2998,7 +2998,8 @@
             "go_to_reservation": "Rezervasyona git",
             "next": "Sonraki",
             "processing": "Süreç",
-            "submit": "Gönder"
+            "submit": "Gönder",
+            "skip": "Atla"
         },
         "cancel": "İptal",
         "choose_credit": "Ödeme yapacağınız krediyi seçin",
